infra/traefik/base/ingress.dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    kubernetes.io/ingress.class: traefik-external
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Infra
    gethomepage.dev/name: Traefik
    gethomepage.dev/icon: traefik.png
    gethomepage.dev/app: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: local-hohepa-dev-tls
